bugfix,打包优化,自动检测SD卡逻辑优化

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -12,6 +12,9 @@
     "dist",
     "dist-electron"
   ],
+  "electronDownload": {
+    "mirror": "https://repo.huaweicloud.com/electron/"
+  },
   "mac": {
     "target": [
       "dmg"
